# seasenselib

./: README.md  about.html  api_reference.html  ctdtools.html  demo-output.html  demo_mooring-output.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  user_guide.html
.github/workflows/: ci.yml  docs.yml  docs_deploy.yml
_modules/: index.html
_sources/: demo-output.ipynb.txt  demo_mooring-output.ipynb.txt
docs/source/: index.rst
examples/example-plugin/: .gitignore  README.md  data.json  pyproject.toml
examples/example-plugin/example_plugin/: __init__.py  histogram_plotter.py  json_reader.py  json_writer.py
notebooks/: demo.ipynb  demo_mooring.ipynb  demo_output_profile.csv  demo_output_profile.nc
seasenselib/: __init__.py  api.py
seasenselib/cli/: parser.py  router.py
seasenselib/core/: __init__.py  autodiscovery.py  factories.py  io_manager.py
seasenselib/plotters/: __init__.py  base.py  depth_profile_plotter.py  profile_plotter.py  time_series_plotter.py  time_series_plotter_multi.py  ts_diagram_plotter.py
seasenselib/readers/: __init__.py  adcp_matlab_rdadcp_reader.py  adcp_matlab_uhhds_reader.py  base.py  rbr_matlab_legacy_reader.py  rbr_matlab_reader.py  rbr_matlab_rsktools_reader.py  rbr_rsk_auto_reader.py  rbr_rsk_legacy_reader.py  rbr_rsk_reader.py  rcm_matlab_reader.py  sbe_ascii_reader.py  sbe_cnv_reader.py  seasun_tob_reader.py
seasenselib/writers/: __init__.py  (+4 more)
tests/: test_readers_completeness.py  test_writers_completeness.py
(+33 files in other folders)
